# gh-backup

./: .editorconfig  .gitignore  .golangci.json  Cargo.toml  LICENSE  README.md  delete-data.go  download.go  go.mod  go.sum  main.go  upload.go
.devcontainer/: devcontainer.json
.github/workflows/: quick-install.sh  release.yaml  release_data.json
config/: config.go  file.go
gh/: gh.go
src/: caching.rs  cli.rs  gh_api.rs  main.rs  restore.rs
uploaders/: googleDrive.go  localFolder.go  uploaders.go  utils.go
