[package]
name = "gh-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "env"] }
colored = "3.0.0"
futures = "0.3.31"
futures-util = "0.3.31"
glob = "0.3.3"
octocrab = { version = "0.48.1", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "time", "rt-multi-thread", "process"] }
